chore: improve code style

--- a/src/lib/res/publish.html
+++ b/src/lib/res/publish.html
@@ -286,7 +286,7 @@
         else window.location.href = "ksoWPSCloudSvr://start=RelayHttpServer" + "&serverId=" + serverId; //是否启动wps弹框
       }
 
-      var serverId = SERVERID_REPLEASE_STRING;
+      var serverId = SERVERID_REPLACE_STRING;
 
       /**
        * 获取serverId的接口
